UI changes + some other changes